--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:07+0200\n"
+"PO-Revision-Date: 2010-08-20 20:08+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6706,6 +6706,7 @@ msgstr ""
 #: setup/lib/messages.inc.php:56
 msgid "Show database listing as a list instead of a drop down"
 msgstr ""
+"Rodyti duombazės sąrašą kaip paprastą sąrašą vietoj išsiskleidžiančio sąrašo"
 
 #: setup/lib/messages.inc.php:57
 msgid "Display databases as a list"
