--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:11+0200\n"
+"PO-Revision-Date: 2010-08-20 20:12+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6793,7 +6793,7 @@ msgstr "Failo simbolių koduotė:"
 
 #: setup/lib/messages.inc.php:81
 msgid "Compression"
-msgstr "Kompresija"
+msgstr "Glaudinimas"
 
 #: setup/lib/messages.inc.php:82
 msgid "Database name template"
