--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:12+0200\n"
+"PO-Revision-Date: 2010-08-20 20:13+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6836,6 +6836,8 @@ msgid ""
 "This [a@?page=form&amp;formset=features#tab_Security]option[/a] should be "
 "enabled if your web server supports it"
 msgstr ""
+"Šis [a@?page=form&amp;formset=features#tab_Security]nustatymas[/a] turėtų "
+"būti įjungtas jei jūsų interneto serveris tai palaiko"
 
 #: setup/lib/messages.inc.php:93
 msgid "Force SSL connection"
