--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:13+0200\n"
+"PO-Revision-Date: 2010-08-20 20:14+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6829,7 +6829,7 @@ msgstr "ne"
 
 #: setup/lib/messages.inc.php:91
 msgid "Force secured connection while using phpMyAdmin"
-msgstr ""
+msgstr "Griežtai naudoti saugų prisijungimą kai naudojamasi phpMyAdmin"
 
 #: setup/lib/messages.inc.php:92
 msgid ""
