--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:14+0200\n"
+"PO-Revision-Date: 2010-08-20 20:16+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6878,9 +6878,8 @@ msgid "Edit mode"
 msgstr "Redagavimo režimas"
 
 #: setup/lib/messages.inc.php:102
-#, fuzzy
 msgid "Customize default export options"
-msgstr "Duombazės eksportavimo parinktys"
+msgstr "Pasirinkti numatytuosius eksportavimo nustatymus"
 
 #: setup/lib/messages.inc.php:103
 #, fuzzy
