Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:16+0200\n"
+"PO-Revision-Date: 2010-08-20 20:17+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6855,7 +6855,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:96
 msgid "A dropdown will be used if fewer items are present"
-msgstr ""
+msgstr "Išskleidžiamas sąrašas bus naudojamas jei elementų bus mažai"
 
 #: setup/lib/messages.inc.php:97
 msgid "Foreign key limit"
