--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 20:18+0200\n"
+"PO-Revision-Date: 2010-08-20 20:32+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6882,9 +6882,8 @@ msgid "Customize default export options"
 msgstr "Pasirinkti numatytuosius eksportavimo nustatymus"
 
 #: setup/lib/messages.inc.php:103
-#, fuzzy
 msgid "Export defaults"
-msgstr "Eksportuoti lenteles"
+msgstr "Eksportuoti numatymus"
 
 #: setup/lib/messages.inc.php:104
 msgid "Customize default common import options"
