Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:02+0200\n"
+"PO-Revision-Date: 2010-08-20 21:03+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6883,7 +6883,7 @@ msgstr "Pasirinkti numatytuosius eksportavimo nustatymus"
 
 #: setup/lib/messages.inc.php:103
 msgid "Export defaults"
-msgstr "Eksportuoti numatymus"
+msgstr "Eksportuoti numatytąsias reikšmes"
 
 #: setup/lib/messages.inc.php:104
 msgid "Customize default common import options"
