--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:09+0200\n"
+"PO-Revision-Date: 2010-08-20 21:10+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6963,7 +6963,7 @@ msgstr "Įvesti serverio ryšio (jungimosi) nustatymus"
 
 #: setup/lib/messages.inc.php:127
 msgid "Enter login options for signon authentication"
-msgstr "Įvesti prisijungimo nustatymus prisijungimo identifikacijai"
+msgstr "Įvesti prisijungimo (identifikacijos) nustatymus"
 
 #: setup/lib/messages.inc.php:128
 msgid "Signon login options"
