--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:10+0200\n"
+"PO-Revision-Date: 2010-08-20 21:11+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -6975,6 +6975,9 @@ msgid ""
 "[a@../Documentation.html#linked-tables]phpMyAdmin configuration storage[/a] "
 "in documentation"
 msgstr ""
+"Konfigūruoti phpMyAdmin duombazę, kad gauti priėjimą prie papildomų "
+"galimybių, žiūrėti [a@../Documentation.html#linked-tables]phpMyAdmin "
+"konfigūracijos atmintinė[/a] dokumentacijoje"
 
 #: setup/lib/messages.inc.php:130 setup/lib/messages.inc.php:291
 msgid "PMA database"
