--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:12+0200\n"
+"PO-Revision-Date: 2010-08-20 21:13+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7009,7 +7009,7 @@ msgstr "Adaptuoti navigacijos rėmelį"
 
 #: setup/lib/messages.inc.php:138
 msgid "Customize main frame"
-msgstr ""
+msgstr "Adaptuoti pagrindinė rėmelį"
 
 #: setup/lib/messages.inc.php:139
 msgid "Customize links shown in SQL Query boxes"
