--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:13+0200\n"
+"PO-Revision-Date: 2010-08-20 21:14+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7017,7 +7017,7 @@ msgstr "Adaptuoti nuorodas rodomas SQL užklausos langelyje"
 
 #: setup/lib/messages.inc.php:140
 msgid "SQL Query box"
-msgstr "SQL užklausos laukelis"
+msgstr "SQL užklausos langelis"
 
 #: setup/lib/messages.inc.php:141
 msgid ""
