--- a/po/lt.po
+++ b/po/lt.po
@@ -7024,6 +7024,9 @@ msgid ""
 "SQL queries settings, for SQL Query box options see [a@?page=form&amp;"
 "formset=main_frame#tab_Sql_box]Navigation frame[/a] settings"
 msgstr ""
+"SQL užklausos nustatymai, SQL užklausos langelio nustatymams žiūrėti "
+"[a@?page=form&amp;formset=main_frame#tab_Sql_box]Navigacijos rėmelio[/a] "
+"nustatymai"
 
 #: setup/lib/messages.inc.php:142
 #, fuzzy
