--- a/po/lt.po
+++ b/po/lt.po
@@ -7042,7 +7042,7 @@ msgstr "Paleidimas (pagrindinis)"
 
 #: setup/lib/messages.inc.php:145
 msgid "Choose how you want tabs to work"
-msgstr ""
+msgstr "Pasirinkti kaip norite, kad veiktų kortelės"
 
 #: setup/lib/messages.inc.php:146
 msgid "Tabs"
