Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:17+0200\n"
+"PO-Revision-Date: 2010-08-20 21:18+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7067,6 +7067,8 @@ msgid ""
 "decompression[/a] requires functions (%s) which are unavailable on this "
 "system."
 msgstr ""
+"[a@?page=form&amp;formset=features#tab_Import_export]GZip suspaudimui ir "
+"išspaudimui[/a] reikalingos funkcijos (%s) neprieinamos šioje sistemoje."
 
 #: setup/lib/messages.inc.php:151
 msgid "Extra parameters for iconv"
