--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:18+0200\n"
+"PO-Revision-Date: 2010-08-20 21:20+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7083,6 +7083,8 @@ msgid ""
 "If enabled, phpMyAdmin continues computing multiple-statement queries even "
 "if one of the queries failed"
 msgstr ""
+"Jeigu įjungta, phpMyAdmin tęsia įvairių-sakinių užklausų paleidinėjimą netgi "
+"jei viena užklausa nepavyksta"
 
 #: setup/lib/messages.inc.php:154
 msgid "Ignore multiple statement errors"
