--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:20+0200\n"
+"PO-Revision-Date: 2010-08-20 21:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7088,7 +7088,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:154
 msgid "Ignore multiple statement errors"
-msgstr ""
+msgstr "Ignoruoti įvairias sakinių klaidas"
 
 #: setup/lib/messages.inc.php:155
 #, fuzzy
