--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:21+0200\n"
+"PO-Revision-Date: 2010-08-20 21:22+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7091,15 +7091,14 @@ msgid "Ignore multiple statement errors"
 msgstr "Ignoruoti įvairias sakinių klaidas"
 
 #: setup/lib/messages.inc.php:155
-#, fuzzy
 msgid ""
 "Allow interrupt of import in case script detects it is close to time limit. "
 "This might be good way to import large files, however it can break "
 "transactions."
 msgstr ""
-"Leisti sustabdyti importavimą jei skriptas nustato, kad priartėta prie laiko "
-"limito. Gali būti naudinga importuojant didelius failus, tačiau gali "
-"sugadinti transakcijas."
+"Leisti sustabdyti importavimą jei skriptas nustato, kad priartėta prie "
+"vykdymo laiko ribos. Gali būti naudinga importuojant didelius failus, tačiau "
+"gali sugadinti tranzakcijas."
 
 #: setup/lib/messages.inc.php:156
 #, fuzzy
