--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:23+0200\n"
+"PO-Revision-Date: 2010-08-20 21:24+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7109,6 +7109,8 @@ msgid ""
 "Default format; be aware that this list depends on location (database, "
 "table) and only SQL is always available"
 msgstr ""
+"Numatytasis formatas; žinokite, kad šis sąrašas priklauso nuo vietos "
+"(duombazė, lentelė) ir tik SQL visada pasiekiamas"
 
 #: setup/lib/messages.inc.php:158
 msgid "Format of imported file"
