--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:26+0200\n"
+"PO-Revision-Date: 2010-08-20 21:27+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7141,7 +7141,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:164
 msgid "How many rows can be inserted at one time"
-msgstr ""
+msgstr "Kiek įrašų (eilučių) gali būti įdėti per vieną kartą"
 
 #: setup/lib/messages.inc.php:165
 msgid "Number of inserted rows"
