--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:27+0200\n"
+"PO-Revision-Date: 2010-08-20 21:28+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7153,7 +7153,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:167
 msgid "Show logo in left frame"
-msgstr ""
+msgstr "Logo rodyti kairiame rėmelyje"
 
 #: setup/lib/messages.inc.php:168
 msgid "Display logo"
