--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:29+0200\n"
+"PO-Revision-Date: 2010-08-20 21:30+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7169,7 +7169,7 @@ msgstr "Rodyti serverių pasirinkimą"
 
 #: setup/lib/messages.inc.php:171
 msgid "String that separates databases into different tree levels"
-msgstr ""
+msgstr "Simboliai kurie atskiria duombazes į atskiras medžio šakas"
 
 #: setup/lib/messages.inc.php:172
 #, fuzzy
