--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:30+0200\n"
+"PO-Revision-Date: 2010-08-20 21:31+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7179,7 +7179,7 @@ msgstr "Duombazės medžio skyriklis"
 msgid ""
 "Only light version; display databases in a tree (determined by the separator "
 "defined below)"
-msgstr ""
+msgstr "Tik maža versija; rodyti duombazės medį (skyriklis nustatomas žemiau)"
 
 #: setup/lib/messages.inc.php:174
 #, fuzzy
