Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -7187,7 +7187,7 @@ msgstr "Rodyti duombazes medyje"
 
 #: setup/lib/messages.inc.php:175
 msgid "Disable this if you want to see all databases at once"
-msgstr ""
+msgstr "Išjungti tai jeigu norite matyti visas duombazes iškart"
 
 #: setup/lib/messages.inc.php:176
 #, fuzzy
