Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -7190,9 +7190,8 @@ msgid "Disable this if you want to see all databases at once"
 msgstr "Išjungti tai jeigu norite matyti visas duombazes iškart"
 
 #: setup/lib/messages.inc.php:176
-#, fuzzy
 msgid "Use light version"
-msgstr "MySQL kliento versija"
+msgstr "Naudoti mažą versiją"
 
 #: setup/lib/messages.inc.php:177
 msgid "Maximum table tree depth"
