--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:32+0200\n"
+"PO-Revision-Date: 2010-08-20 21:33+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7195,7 +7195,7 @@ msgstr "Naudoti mažą versiją"
 
 #: setup/lib/messages.inc.php:177
 msgid "Maximum table tree depth"
-msgstr ""
+msgstr "Maksimalus lentelių medžio gylis"
 
 #: setup/lib/messages.inc.php:178
 msgid "String that separates tables into different tree levels"
