--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:34+0200\n"
+"PO-Revision-Date: 2010-08-20 21:35+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7207,7 +7207,7 @@ msgstr "Lentelės medžio skyriklis"
 
 #: setup/lib/messages.inc.php:180
 msgid "Logo link URL"
-msgstr "Logotipo saito nuoroda"
+msgstr "Logotipo saito adresas"
 
 #: setup/lib/messages.inc.php:181
 msgid ""
