Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:37+0200\n"
+"PO-Revision-Date: 2010-08-20 21:38+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7219,7 +7219,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:182
 msgid "Logo link target"
-msgstr ""
+msgstr "Logotipas nukreipia į nuorodą"
 
 #: setup/lib/messages.inc.php:183
 #, fuzzy
