--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:38+0200\n"
+"PO-Revision-Date: 2010-08-20 21:39+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7222,9 +7222,8 @@ msgid "Logo link target"
 msgstr "Logotipas nukreipia į nuorodą"
 
 #: setup/lib/messages.inc.php:183
-#, fuzzy
 msgid "Highlight server under the mouse cursor"
-msgstr "Paryškinti eilutę po pelės žymekliu"
+msgstr "Paryškinti serverį užvedus pelės žymekliu"
 
 #: setup/lib/messages.inc.php:184
 msgid "Enable highlighting"
