--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:39+0200\n"
+"PO-Revision-Date: 2010-08-20 21:41+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7231,7 +7231,7 @@ msgstr "Įjungti paryškinimą"
 
 #: setup/lib/messages.inc.php:186
 msgid "Use less graphically intense tabs"
-msgstr ""
+msgstr "Naudoti mažiau grafiškas kerteles"
 
 #: setup/lib/messages.inc.php:187
 msgid "Light tabs"
