--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:41+0200\n"
+"PO-Revision-Date: 2010-08-20 21:42+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7246,7 +7246,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:190
 msgid "Delete all cookies on logout"
-msgstr ""
+msgstr "Ištrinti visus slapukus atsijungiant"
 
 #: setup/lib/messages.inc.php:191
 msgid ""
