--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:42+0200\n"
+"PO-Revision-Date: 2010-08-20 21:54+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7243,6 +7243,10 @@ msgid ""
 "only occurs for the current server. Setting this to FALSE makes it easy to "
 "forget to log out from other servers when connected to multiple servers."
 msgstr ""
+"Jeigu TIESA, atsijungiant ištrinami slapukai visiems serveriams; jeigu "
+"nustatyta NETIESA, atsijungiama tik iš to serverio. Kai nustatymas NETIESA "
+"lengva pamiršti atsijungi iš kitų skirtingų serverių (prie kurių esate "
+"prisijungę)."
 
 #: setup/lib/messages.inc.php:190
 msgid "Delete all cookies on logout"
