Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 21:54+0200\n"
+"PO-Revision-Date: 2010-08-20 22:10+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7269,6 +7269,10 @@ msgid ""
 "and will be deleted as soon as you close the browser window. This is "
 "recommended for non-trusted environments."
 msgstr ""
+"Nusako kiek ilgai (sekundžių tikslumu) prisijungimo slapukas turėtų būti "
+"saugojamas naršyklėje. Numatytoji reikšmė 0 reiškia, kad bus laikoma tik "
+"egzistuojančioje sesijoje ir bus ištrinta naršyklės uždarymo momentu. "
+"Rekomenduojama nepatikimose aplinkose."
 
 #: setup/lib/messages.inc.php:194
 msgid "Login cookie store"
