Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:28+0200\n"
+"PO-Revision-Date: 2010-08-20 22:31+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7288,6 +7288,10 @@ msgid ""
 "be set to 1800 seconds (30 minutes) at most. Values larger than 1800 may "
 "pose a security risk such as impersonation."
 msgstr ""
+"[a@?page=form&formset=features#tab_Security]Prisijungimo slapuko "
+"galiojimas[/a] dažniausiai turėtų būti nustatytas 1800 sekundžių (30 "
+"minučių). Reikšmės ilgesnės negu 1800 gali kelti saugumo riziką kai kitas "
+"žmogus prisėda prie to kompo."
 
 #: setup/lib/messages.inc.php:197
 msgid "Login cookie validity"
