--- a/po/lt.po
+++ b/po/lt.po
@@ -7303,7 +7303,7 @@ msgstr "Didžiausias leistinas simbolių kiekis naudojamas SQL užklausai parody
 
 #: setup/lib/messages.inc.php:199
 msgid "Maximum displayed SQL length"
-msgstr ""
+msgstr "Maksimalus SQL rodymo ilgis"
 
 #: setup/lib/messages.inc.php:200
 msgid "Maximum number of databases displayed in left frame and database list"
