--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:36+0200\n"
+"PO-Revision-Date: 2010-08-20 22:37+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7320,6 +7320,9 @@ msgid ""
 "contains more rows, &quot;Previous&quot; and &quot;Next&quot; links will be "
 "shown."
 msgstr ""
+"Eilučių (įrašų) skaičius ekrane naršant rezultatų rinkinį. Jeigu rezultatų "
+"rinkinys turi daugiau eilučių, „Ankstesnis“ ir „Kitas“ saito nuorodos bus "
+"parodytos."
 
 #: setup/lib/messages.inc.php:203
 msgid "Maximum number of rows to display"
