--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:37+0200\n"
+"PO-Revision-Date: 2010-08-20 22:38+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7334,7 +7334,7 @@ msgstr "Maksimalus skaičius lentelių rodomų lentelių sąraše"
 
 #: setup/lib/messages.inc.php:205
 msgid "Maximum tables"
-msgstr ""
+msgstr "Didžiausias skaičius lentelių"
 
 #: setup/lib/messages.inc.php:206
 msgid ""
