--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:41+0200\n"
+"PO-Revision-Date: 2010-08-20 22:42+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7350,7 +7350,7 @@ msgstr "Atminties apribojimai"
 
 #: setup/lib/messages.inc.php:208 setup/lib/messages.inc.php:220
 msgid "Use only icons, only text or both"
-msgstr ""
+msgstr "Naudoti tik piktogramas (ikonas), tik tekstą arba abu"
 
 #: setup/lib/messages.inc.php:209
 msgid "Iconic navigation bar"
