--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:45+0200\n"
+"PO-Revision-Date: 2010-08-20 22:46+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7385,7 +7385,7 @@ msgstr "Ilgalaikiai sujungimai"
 
 #: setup/lib/messages.inc.php:221
 msgid "Iconic table operations"
-msgstr ""
+msgstr "Piktograminės lentelių operacijos"
 
 #: setup/lib/messages.inc.php:222
 msgid "Disallow BLOB and BINARY columns from editing"
