Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:47+0200\n"
+"PO-Revision-Date: 2010-08-20 22:49+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7400,6 +7400,9 @@ msgid ""
 "Enable if you want DB-based query history (requires pmadb). If disabled, "
 "this utilizes JS-routines to display query history (lost by window close)."
 msgstr ""
+"Įjungti jeigu norite DB-paremtą užklausų istoriją (reikalauja pmadb). Jeigu "
+"išjungta, naudoja JS-programas rodyti užklausų istoriją (prarandamos "
+"uždarius langą)."
 
 #: setup/lib/messages.inc.php:225
 msgid "Permanent query history"
