--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:51+0200\n"
+"PO-Revision-Date: 2010-08-20 22:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7418,7 +7418,7 @@ msgstr "Užklausų istorijos ilgis"
 
 #: setup/lib/messages.inc.php:228
 msgid "Tab displayed when opening a new query window"
-msgstr ""
+msgstr "Parodoma kortelė kai atidaromas naujas užklausos langas"
 
 #: setup/lib/messages.inc.php:229
 msgid "Default query window tab"
