--- a/po/lt.po
+++ b/po/lt.po
@@ -7422,7 +7422,7 @@ msgstr "Parodoma kortelė kai atidaromas naujas užklausos langas"
 
 #: setup/lib/messages.inc.php:229
 msgid "Default query window tab"
-msgstr ""
+msgstr "Numatytoji užklausos lango kortelė"
 
 #: setup/lib/messages.inc.php:230
 msgid "Select which functions will be used for character set conversion"
