--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:56+0200\n"
+"PO-Revision-Date: 2010-08-20 22:58+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7474,7 +7474,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:242
 msgid "Leave blank for defaults"
-msgstr ""
+msgstr "Palikite tuščią nutylėtoms reikšmėms"
 
 #: setup/lib/messages.inc.php:243
 msgid "Host authentication rules"
