--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 22:58+0200\n"
+"PO-Revision-Date: 2010-08-20 22:59+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7458,7 +7458,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:237
 msgid "You should use mysqli for performance reasons"
-msgstr ""
+msgstr "Jūs turėtumėte naudoti mysqli dėl našumo (efektyvumo) priežasčių"
 
 #: setup/lib/messages.inc.php:238
 msgid "You allow for connecting to the server without a password."
